// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: CharacterLabel should render with minimum props 1`] = `
<div
  className="character inline"
>
  <div
    className="character-label"
  >
    <span
      className="character-label__item"
    >
      Level 
    </span>
    <span
      className="character-label__item"
    />
    <span
      className="character-label__item"
    />
  </div>
</div>
`;

exports[`Component: CharacterLabel should show modified char 1`] = `
<div
  className="character inline"
>
  <div
    className="character-label"
  >
    <span
      className="character-label__name"
    >
      Example
    </span>
    <span
      className="character-label__item"
    >
      Level 
      5
    </span>
    <div
      className="list-label inline"
    >
      Female
    </div>
    <span
      className="character-label__item"
    >
      Orc
    </span>
    <span
      className="character-label__item"
    >
      Fighter
    </span>
    <div
      className="list-label inline character-label__alignment"
    >
      Lawful good
    </div>
  </div>
  <div
    className="nice-progress brand"
  >
    <div
      className="nice-progress-fill"
      style={
        Object {
          "height": "1.25rem",
          "width": "50%",
        }
      }
    >
      5 (4/8)
    </div>
  </div>
</div>
`;

exports[`Component: CharacterLabel should show progress with acp 1`] = `
<div
  className="character inline"
>
  <div
    className="character-label"
  >
    <span
      className="character-label__name"
    >
      Example
    </span>
    <span
      className="character-label__item"
    >
      Level 
      5
    </span>
    <div
      className="list-label inline"
    >
      Female
    </div>
    <span
      className="character-label__item"
    >
      Orc
    </span>
    <span
      className="character-label__item"
    >
      Fighter
    </span>
    <div
      className="list-label inline character-label__alignment"
    >
      Lawful good
    </div>
  </div>
  <div
    className="nice-progress brand"
  >
    <div
      className="nice-progress-fill"
      style={
        Object {
          "height": "1.25rem",
          "width": "50%",
        }
      }
    >
      5 (4/8)
    </div>
  </div>
</div>
`;

exports[`Component: CharacterLabel should show progress with level 1`] = `
<div
  className="character inline"
>
  <div
    className="character-label"
  >
    <span
      className="character-label__name"
    >
      Example
    </span>
    <span
      className="character-label__item"
    >
      Level 
      1
    </span>
    <div
      className="list-label inline"
    >
      Male
    </div>
    <span
      className="character-label__item"
    >
      Orc
    </span>
    <span
      className="character-label__item"
    >
      Fighter
    </span>
    <div
      className="list-label inline character-label__alignment"
    >
      Lawful good
    </div>
  </div>
  <div
    className="nice-progress good"
  >
    <div
      className="nice-progress-fill"
      style={
        Object {
          "height": "1.25rem",
          "width": "16.666666666666664%",
        }
      }
    >
      50
    </div>
  </div>
</div>
`;

exports[`Component: CharacterLabel should show progress with xp / max 1`] = `
<div
  className="character inline"
>
  <div
    className="character-label"
  >
    <span
      className="character-label__name"
    >
      Example
    </span>
    <span
      className="character-label__item"
    >
      Level 
      1
    </span>
    <div
      className="list-label inline"
    >
      Male
    </div>
    <span
      className="character-label__item"
    >
      Orc
    </span>
    <span
      className="character-label__item"
    >
      Fighter
    </span>
    <div
      className="list-label inline character-label__alignment"
    >
      Lawful good
    </div>
  </div>
  <div
    className="nice-progress good"
  >
    <div
      className="nice-progress-fill"
      style={
        Object {
          "height": "1.25rem",
          "width": "99.66666666666667%",
        }
      }
    >
      Level 1 (299 / 300)
    </div>
  </div>
</div>
`;

exports[`Component: CharacterLabel should show without progress 1`] = `
<div
  className="character inline"
>
  <div
    className="character-label"
  >
    <span
      className="character-label__name"
    >
      Example
    </span>
    <span
      className="character-label__item"
    >
      Level 
      1
    </span>
    <div
      className="list-label inline"
    >
      Male
    </div>
    <span
      className="character-label__item"
    >
      Orc
    </span>
    <span
      className="character-label__item"
    >
      Fighter
    </span>
    <div
      className="list-label inline character-label__alignment"
    >
      Lawful good
    </div>
  </div>
</div>
`;
